updating style.css: updated footer and footer copy background

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,9 +38,12 @@ h3{
 p{
   font-size: 14px;
 }
+#footer, #footer_copy{
+  background-color: dimgray;
+  background-size: cover;
+}
 #subheader, #footer ul li a, #footer_copy p{
   font-size: 11px;
-  background-color: dimgray;
 }
 #footer_copy p{
 
